--- a/2025/formulario/style.css
+++ b/2025/formulario/style.css
@@ -108,7 +108,7 @@ body{
     width: 75vh;
     height: 70vh;
     padding: 2vh;
-    border-radius: 1vh;
+    border-radius: 2vh;
 
     background: transparent;
     backdrop-filter: blur(2vh);
@@ -118,21 +118,27 @@ body{
 .tabela-main table{
     display:table;
     table-layout: auto;
+    border-collapse: collapse;
     width: 100%;
-    padding: 1vh;
-    border-radius: .5vh;    
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(2vh);
     border: .1vh solid rgba(255, 255, 255, 0.3);
 }
 
 .tabela-main-header{
-    border: .5vh solid rgba(255, 255, 255, 0.3);
+    letter-spacing: 0;
+}
+
+.tabela-main table td, 
+.tabela-main table th {
+    border: .1vh solid rgba(255, 255, 255, 0.3);
 }
 
 .tabela-main table tr{
+    outline: .1vh solid rgba(255, 255, 255, 0.3);
     text-align: center;
 }
+
 
 
 /* ANIMAÇÕES --------------------------------------------------------------- */
